[package]
name = "luceo"
version = "1.0.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          , "Stewart Mackenzie <setori88@gmail.com>"
          ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fractalide/luceo"
homepage = "https://fractalide.com"
documentation = "https://github.com/fractalide/luceo#USAGE.md"
description = """
The Luceo command line interface:

* powerful blockchain manager: download, explore, verify, analyse;
* manage multiple wallets: daedalus', icarus' or other kind of wallets;
* flexible transaction build engine.
"""


[dependencies]
console = "0.7"
dialoguer = { git = "https://github.com/primetype/dialoguer", rev = "2f5b8b96cc1388834915f65fca59b7c14fde0835" }
indicatif = "0.9"
log = "0.4"
dirs = "1.0"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
env_logger = "0.5"
humantime = "1.1"
cbor_event = "1.0"
cryptoxide = "0.1"
exe-common      = { path = "../luceo-common/exe-common" }
cardano-storage = { path = "../luceo-common/storage" }
storage-units   = { path = "../luceo-common/storage-units" }
base64 = "0.9"

[dependencies.clap]
version = "2.32"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[dependencies.cardano]
path = "../luceo-common/cardano"
features = [ "generic-serialization" ]
